Wrapped burger button in div to fix sizing issues for bars.

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 html, body {
   height:100vh;
   width:100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 html {
   background:#141518;
@@ -43,7 +43,6 @@ html {
   padding-top:5vh;
   padding-bottom:5vh;
   margin:auto;
-  font-size:3vh;
   margin-left:4vw;
   color:lightgray;
 }
